--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,8 @@
- <header>TopPage</header>
+<header>TopPage</header>
+<h1>練習問題</h1>
 
-<button>
- <%= link_to 'ボタン', '#' %>
+ <button>
+  <%= link_to 'ボタン', '#' %>
  </button>
 
  
